--- a/sass/site/compatibility/edd.scss
+++ b/sass/site/compatibility/edd.scss
@@ -1090,3 +1090,15 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 	padding: 0;
 	margin: 0;
 }
+
+
+//Full width / stretched for EDD Archive page
+.ast-page-builder-template{
+	&.ast-edd-archive-page{
+		.site-content{
+			> .ast-container{
+				max-width: 100%;
+			}
+		}
+	}
+}
